@@ -7,6 +7,7 @@ import com.algaworks.algafood.api.model.PedidoModel;
 import com.algaworks.algafood.api.model.PedidoResumoModel;
 import com.algaworks.algafood.api.model.input.PedidoInput;
 import com.algaworks.algafood.api.openapi.controller.PedidoControllerOpenApi;
+import com.algaworks.algafood.core.data.PageWrapper;
 import com.algaworks.algafood.core.data.PageableTranslator;
 import com.algaworks.algafood.domain.exception.EntidadeNaoEncontradaException;
 import com.algaworks.algafood.domain.exception.NegocioException;
@@ -33,6 +34,7 @@ import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
 import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequestMapping(value = "/pedidos")
@@ -58,9 +60,10 @@ public class PedidoController implements PedidoControllerOpenApi {
 
     @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
     public PagedModel<PedidoResumoModel> pesquisar(@PageableDefault(size = 10) Pageable pageable, PedidoFilter filtro){
-        pageable = traduzirPageable(pageable);
-        Page<Pedido> pedidosPage = pedidoRepository.findAll(PedidoSpecs.usandoFiltro(filtro), pageable);
+        Pageable pageableTraduzido = traduzirPageable(pageable);
+        Page<Pedido> pedidosPage = pedidoRepository.findAll(PedidoSpecs.usandoFiltro(filtro), pageableTraduzido);
 
+        pedidosPage = new PageWrapper<>(pedidosPage, pageable);
         return pagedResourcesAssembler.toModel(pedidosPage, pedidoResumoModelAssembler);
     }
 
@@ -89,10 +92,16 @@ public class PedidoController implements PedidoControllerOpenApi {
     }
 
     private Pageable traduzirPageable(Pageable apiPageable){
-        var mapeamento = ImmutableMap.of("codigo", "codigo",
-                "nomeCliente", "cliente,nome",
-                "restaurante.nome", "restaurante.nome",
-                "valorTotal", "valorTotal");
+        var mapeamento = Map.of(
+                "codigo", "codigo",
+                "subtotal","subtotal",
+                "taxaFrete","taxaFrete",
+                "valorTotal", "valorTotal",
+                "dataCriacao","dataCriacao",
+                "nomerestaurante", "restaurante.nome",
+                "restaurante.id","restaurante.id",
+                "cliente.nome", "cliente.nome"
+                );
 
         return PageableTranslator.translate(apiPageable, mapeamento);
     }
